fix: add nowrap to long text

--- a/packages/raystack/v1/components/tabs/tabs.module.css
+++ b/packages/raystack/v1/components/tabs/tabs.module.css
@@ -31,6 +31,9 @@
   transition: all 0.2s ease;
   flex: 1;
   text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .trigger:hover:not([data-disabled]) {
